2002-07-12  Darin Adler  <darin@apple.com>

	Fix cancelling. My recent check-in broke it for downloads.

        * WebCoreSupport.subproj/IFResourceURLHandleClient.m:
        (-[IFResourceURLHandleClient receivedError:forHandle:]): Helper function to save code.
        (-[IFResourceURLHandleClient IFURLHandleResourceDidCancelLoading:]): Use an error for
	cancel rather than -1,-1 progress.

        * WebView.subproj/IFMainURLHandleClient.mm:
        (-[IFMainURLHandleClient receivedProgressWithHandle:complete:]): Remove -1,-1 handling
	here; instead we treat it as an error.
        (-[IFMainURLHandleClient receivedError:forHandle:]): Remove most of the parameters
	since they are things we can compute ourselves.
        (-[IFMainURLHandleClient IFURLHandleResourceDidCancelLoading:]): Use an error for
	cancel rather than -1,-1 progress.

        * WebView.subproj/IFWebControllerPrivate.mm:
        (-[IFWebController _receivedProgress:forResourceHandle:fromDataSource:complete:]):
	Remove the -1,-1 cancel handling; we use an error instead.
        (-[IFWebController _mainReceivedProgress:forResourceHandle:fromDataSource:complete:]):
	Remove the -1,-1 cancel handling; we use an error instead.
        (-[IFWebController _receivedError:forResourceHandle:partialProgress:fromDataSource:]):
	Remove the _isStopping check. We want to do the additional work even if already stopping.
        (-[IFWebController _mainReceivedError:forResourceHandle:partialProgress:fromDataSource:]):
	Remove the _isStopping check. We want to do the additional work even if already stopping.

        * WebView.subproj/IFWebView.mm: (-[IFWebView keyDown:]): Use NSDeleteCharacter.

2002-07-12  Darin Adler  <darin@apple.com>

        * WebView.subproj/IFWebDataSource.mm:
        (+[IFWebDataSource registerRepresentationClass:forMIMEType:]):
	Use self instead of [self class].
        (+[IFWebDataSource createRepresentationForMIMEType:]):
	Use the new _IF_objectForMIMEType to simplify and use hash table